--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "stylelint-config-property-sort-order-smacss": "^1.1.2"
   }
 }
