Styling the profile and repository

--- a/.stylelintrc
+++ b/.stylelintrc
@@ -10,6 +10,6 @@
       "except": ["first-nested"],
       "ignore": ["after-comment"]
     } ],
-    "unit-whitelist": ["em", "rem", "%", "s", "px"]
+    "unit-whitelist": ["em", "rem", "%", "s", "px", "vh", "vw"]
   }
 }
